test/conformance/chainsaw/generate/clusterpolicy/cornercases/pod-restart-on-cm-update-deprecated/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-cm-for-kube-state-metrics-crds
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
