test/conformance/chainsaw/generate/clusterpolicy/cornercases/pod-restart-on-cm-update-deprecated/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: pod-restart-on-cm-update
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: manifests.yaml
    - apply:
        file: cluster-role.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - script:
        content: kubectl get po -n kube-state-metrics | awk 'NR==2{print $1}' > pod-name.txt
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - script:
        content: if [ "$(kubectl get pods -n kyverno | sort --key 5 --numeric | awk
          'NR==2{print $1}')" != "$(cat pod-name.txt)" ];then exit;else (exit 1);fi
